--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,2 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>ListaDeLaCompra</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
-</html>
+<router-outlet></router-outlet>
+<app-root></app-root>
